# roost-web

./: .gitignore  Cargo.toml  FetchTheme.js  Makefile
src/: lib.rs  parse_ansi.rs
web/: icon.xcf  index.html  manifest.webmanifest  package-lock.json  package.json  roost-playground.xcf  style.css  tsconfig.json  webpack.config.cjs
web/examples/: box.ro  fib.ro  fizzBuzz.ro  prime.ro  welcome.ro
web/images/: logo.xcf
web/src/: configuration.ts  main.ts  monaco.ts  one-dark-theme.ts  providers.ts  register.ts  roost-config.ts  roost-grammar.ts  roost.worker.ts
