[package]
name = "roost-web"
version = "0.1.0"
edition = "2021"
description = "Web Playground for the roost language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
roost = { git = "https://github.com/RubixDev/roost", package = "roost" }
